// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EndpointsFactory > .build() > Should create an endpoint with intersection middleware 1`] = `
{
  "_def": {
    "left": {
      "_def": {
        "left": {
          "_cached": null,
          "_def": {
            "catchall": {
              "_def": {
                "typeName": "ZodNever",
              },
            },
            "typeName": "ZodObject",
            "unknownKeys": "strip",
          },
        },
        "right": {
          "_cached": null,
          "_def": {
            "catchall": {
              "_def": {
                "typeName": "ZodNever",
              },
            },
            "typeName": "ZodObject",
            "unknownKeys": "strip",
          },
        },
        "typeName": "ZodIntersection",
      },
    },
    "right": {
      "_cached": null,
      "_def": {
        "catchall": {
          "_def": {
            "typeName": "ZodNever",
          },
        },
        "typeName": "ZodObject",
        "unknownKeys": "strip",
      },
    },
    "typeName": "ZodIntersection",
  },
}
`;

exports[`EndpointsFactory > .build() > Should create an endpoint with intersection middleware 2`] = `
{
  "_cached": null,
  "_def": {
    "catchall": {
      "_def": {
        "typeName": "ZodNever",
      },
    },
    "typeName": "ZodObject",
    "unknownKeys": "strip",
  },
}
`;

exports[`EndpointsFactory > .build() > Should create an endpoint with refined object middleware 1`] = `
{
  "_def": {
    "left": {
      "_def": {
        "effect": {
          "type": "refinement",
        },
        "schema": {
          "_cached": null,
          "_def": {
            "catchall": {
              "_def": {
                "typeName": "ZodNever",
              },
            },
            "typeName": "ZodObject",
            "unknownKeys": "strip",
          },
        },
        "typeName": "ZodEffects",
      },
    },
    "right": {
      "_cached": null,
      "_def": {
        "catchall": {
          "_def": {
            "typeName": "ZodNever",
          },
        },
        "typeName": "ZodObject",
        "unknownKeys": "strip",
      },
    },
    "typeName": "ZodIntersection",
  },
}
`;

exports[`EndpointsFactory > .build() > Should create an endpoint with refined object middleware 2`] = `
{
  "_cached": null,
  "_def": {
    "catchall": {
      "_def": {
        "typeName": "ZodNever",
      },
    },
    "typeName": "ZodObject",
    "unknownKeys": "strip",
  },
}
`;

exports[`EndpointsFactory > .build() > Should create an endpoint with simple middleware 1`] = `
{
  "_def": {
    "left": {
      "_cached": null,
      "_def": {
        "catchall": {
          "_def": {
            "typeName": "ZodNever",
          },
        },
        "typeName": "ZodObject",
        "unknownKeys": "strip",
      },
    },
    "right": {
      "_cached": null,
      "_def": {
        "catchall": {
          "_def": {
            "typeName": "ZodNever",
          },
        },
        "typeName": "ZodObject",
        "unknownKeys": "strip",
      },
    },
    "typeName": "ZodIntersection",
  },
}
`;

exports[`EndpointsFactory > .build() > Should create an endpoint with simple middleware 2`] = `
{
  "_cached": null,
  "_def": {
    "catchall": {
      "_def": {
        "typeName": "ZodNever",
      },
    },
    "typeName": "ZodObject",
    "unknownKeys": "strip",
  },
}
`;

exports[`EndpointsFactory > .build() > Should create an endpoint with union middleware 1`] = `
{
  "_def": {
    "left": {
      "_def": {
        "options": [
          {
            "_cached": null,
            "_def": {
              "catchall": {
                "_def": {
                  "typeName": "ZodNever",
                },
              },
              "typeName": "ZodObject",
              "unknownKeys": "strip",
            },
          },
          {
            "_cached": null,
            "_def": {
              "catchall": {
                "_def": {
                  "typeName": "ZodNever",
                },
              },
              "typeName": "ZodObject",
              "unknownKeys": "strip",
            },
          },
        ],
        "typeName": "ZodUnion",
      },
    },
    "right": {
      "_cached": null,
      "_def": {
        "catchall": {
          "_def": {
            "typeName": "ZodNever",
          },
        },
        "typeName": "ZodObject",
        "unknownKeys": "strip",
      },
    },
    "typeName": "ZodIntersection",
  },
}
`;

exports[`EndpointsFactory > .build() > Should create an endpoint with union middleware 2`] = `
{
  "_cached": null,
  "_def": {
    "catchall": {
      "_def": {
        "typeName": "ZodNever",
      },
    },
    "typeName": "ZodObject",
    "unknownKeys": "strip",
  },
}
`;
